<package format="2">
  <name>ppf_node</name>
  <version>0.0.0</version>
  <description>Path Planning Node using Potential Field</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
